--- a/uwazitek/src/app/add-users/view-users/view-users.component.html
+++ b/uwazitek/src/app/add-users/view-users/view-users.component.html
@@ -1,4 +1,6 @@
+<h3 class="page-name">View Users</h3>
 <p>Current onboarded Users to the system.</p>
+
 <div class="search-container">
   <input type="text" class="search-bar" placeholder="Search users" [(ngModel)]="searchQuery" 
   (input)="filterUsers()" />
@@ -29,7 +31,7 @@
       <td>{{ users.Address }}</td>
       <td>{{ users.AdditionalInfo }}</td>
       <td>
-
+        <button mat-button color="primary" (click)="openEditUserDialog(users.Id)">Edit</button>
         <button *ngIf="users.type === 'Hospital'" (click)="deleteHospital(users.Id)" class="btn-danger">Delete</button>
         <button *ngIf="users.type === 'Insurance'" (click)="deleteInsuranceDetails(users.Id)" class="btn-danger">Delete</button>
       </td>
