added new files

--- a/uwazitek/src/app/add-users/add-user-page.component.html
+++ b/uwazitek/src/app/add-users/add-user-page.component.html
@@ -1,7 +1,7 @@
 
 <div class="main-container">
 <nav class="user-nav">
-  <mat-tab-group>
+  <mat-tab-group class="add-mat">
     <mat-tab label="Add Hospital">
       <app-user-hospital></app-user-hospital>
     </mat-tab>
