--- a/uwazitek/src/app/admin-dashboard/admin-dashboardLayout/admin-dashboard.component.html
+++ b/uwazitek/src/app/admin-dashboard/admin-dashboardLayout/admin-dashboard.component.html
@@ -2,77 +2,87 @@
 </header>
 <div class="main-container">
     <nav (click)="handleIconClick()" class="navbar">
-        <div class="top-section">
+            <div class="top-section">
             <div class="nav-logo">
-                <img src="assets/logo.png" alt="" srcset="" id="logo-image">
+                <img src="assets/logo uwazitek.png" alt="" srcset="" id="logo-image">
             </div>
-
+        
             <div class="nav-links">
+                <p>Main Menu </p>
                 <div class="home-nav nav-div" [class.nav-active]="activeTab === 'home-layout'"
                     (click)="addActive('home-layout')">
-                    <lucide-icon [img]="HomeIcon" class="my-icon" aria-label="Home"></lucide-icon>
-                    <span class="icon-label">Home</span>
+                    <lucide-icon [img]="LayoutDashboardIcon" class="my-icon" aria-label="dashboard"></lucide-icon>
+                    <span class="icon-label" (click)="onclick('home-layout')">Dashboard</span>
                 </div>
-
-
-                <!-- <div class="dropdown-container user-hub-nav">
-                    <div class="dropdown-header" (click)="toggleDropdown()">
-                        <lucide-icon [img]="UsersIcon" class="my-icon" aria-label="Users Hub"></lucide-icon>
-                        <span class="icon-label"> Users Hub</span>
-                    </div>
-                    <div class="dropdown-menu" *ngIf="isDropdownclicked">
-                        <div class="dropdown-item">
-                            <lucide-icon [img]="UserPlusIcon" class="my-icon" aria-label="Add user"></lucide-icon>
-                            <span class="icon-label" (click)="onclick('add-user-page')">Add User</span>
-                        </div>
-                        <div class="dropdown-item">
-                            <lucide-icon [img]="EyeIcon" class="my-icon" arial-label="View User"></lucide-icon>
-                            <span class="icon-label" (click)="onclick('view-users')">View User</span>
-                        </div>
-                        <div class="dropdown-item">
-                            <lucide-icon [img]="UserCheckIcon" class="my-icon" aria-label="User Verification"></lucide-icon>
-                            <span class="icon-label" (click)="onclick('user-verification')">User Verification</span>
-                        </div>
-                    </div>
-                </div> -->
-
-                <div class="dropdown-btn nav-div" [class.active]="isDropdownclicked" (click)="toggleDropdown()">
-                    <lucide-icon [img]="UsersIcon" class="my-icon" aria-label="Users Hub"></lucide-icon>
-                    <span class="icon-label"> Users Hub</span>
+                
+<div class="dropdown-btn nav-div" [class.active]="activeDropdown === 'hospital-organization'" (click)="toggleDropdown('hospital-organization')">
+    <lucide-icon [img]="HospitalIcon" class="my-icon" aria-label="Organization"></lucide-icon>
+    <span class="icon-label">Hospital Organization</span>
+  </div>
+  <div class="dropdown-container" [style.display]="activeDropdown === 'hospital-organization' ? 'flex' : 'none'">
+    <div class="view-nav nav-div" [class.nav-active]="activeTab === 'overview-hospital'" (click)="addActive('overview-hospital')">
+      <span class="icon-label" (click)="onclick('overview-hospital')">Overview</span>
+    </div>
+    <div class="add-nav nav-div" [class.nav-active]="activeTab === 'add-hospitalorganization'" (click)="addActive('add-hospitalorganization')">
+      <span class="icon-label" (click)="onclick('add-hospitalorganization')">Add Hospital</span>
+    </div>
+  </div>
+  
+  
+  <div class="dropdown-btn nav-div" [class.active]="activeDropdown === 'insurance-organization'" (click)="toggleDropdown('insurance-organization')">
+    <lucide-icon [img]="ShieldCheckIcon" class="my-icon" aria-label="Organization Insurance"></lucide-icon>
+    <span class="icon-label">Insurance Organization</span>
+  </div>
+  <div class="dropdown-container" [style.display]="activeDropdown === 'insurance-organization' ? 'flex' : 'none'">
+    <div class="view-nav nav-div" [class.nav-active]="activeTab === 'overview-insurance'" (click)="addActive('overview-insurance')">
+      <span class="icon-label" (click)="onclick('overview-insurance')">Overview</span>
+    </div>
+    <div class="add-nav nav-div" [class.nav-active]="activeTab === 'add-insuranceorganization'" (click)="addActive('add-insuranceorganization')">
+      <span class="icon-label" (click)="onclick('add-insuranceorganization')">Add Insurance</span>
+    </div>
+  </div>
+                <div class="claims-nav nav-div" [class.nav-active]="activeTab==='activity'" (click)="addActive('activity')">
+                    <lucide-icon [img]="FilesIcon" class="my-icon" aria-label="reports"> </lucide-icon>
+                    <span class="icon-label" (click)="onclick('activity')">Reports</span>
                 </div>
-                  <div class="dropdown-container" [style.display]="isDropdownclicked ? 'flex' : 'none'">
-                      <span class="icon-label" (click)="onclick('view-users')">View Users</span>
-                      <span class="icon-label" (click)="onclick('add-user-page')">Add User</span>
-                    <span class="icon-label" (click)="onclick('user-verification')">Verification</span>
                 </div>
-
-                <div class="claims-nav nav-div">
-                    <lucide-icon [img]="FilesIcon" class="my-icon" aria-label="claims report"> </lucide-icon>
-                    <span class="icon-label" (click)="onclick('activity')">Claims Report</span>
-                </div>
+                <div class="bottom-section">
+                  <p>Preference</p>
                 <div class="settings-nav nav-div" [class.nav-active]="activeTab === 'settings'"
-                (click)="addActive('settings')">>
-                    <lucide-icon [img]="SettingsIcon" class="my-icon" aria-label="Settings"></lucide-icon>
+                (click)="addActive('settings')">
+                    <lucide-icon [img]="SettingsIcon" class="my-icon" aria-label="settings"></lucide-icon>
                     <span class="icon-label" (click)="onclick('settings')">Settings</span>
                 </div>
+                <div class="profile-nav nav-div" [class.nav-active]="activeTab === 'profile'"
+                (click)="addActive('profile')">
+                   <lucide-icon [img]="CircleUserRoundIcon" class="my-icon" arial-label="profile"></lucide-icon>
+                   <span class="icon-label" (click)="onclick('profile')">Profile</span>
+              </div>
+              <div class="help-nav nav-div" [class.nav-active]="activeTab === 'helpcenter'"
+              (click)="addActive('helpcenter')">
+                 <lucide-icon [img]="InfoIcon" class="my-icon" arial-label="help"></lucide-icon>
+                 <span class="icon-label" (click)="onclick('helpcenter')">Help Center</span>
             </div>
-        </div>
-
-
-        <div class="logout-area">
+            </div>
+            </div>
+        
+        <div class="logout-area" [class.nav-active]="activeTab==='logout-dialog'"
+        (click)="addActive('logout-dialog')">
             <lucide-icon [img]="LogOutIcon" class="my-icon" aria-label="Log Out"></lucide-icon>
             <span class="icon-label" (click)="openLogoutDialog()">Log Out</span>
         </div>
+        
     </nav>
 
     <div class="content">
-        <app-add-user-page *ngIf="usertype==='add-user-page'"></app-add-user-page>
         <app-home-layout *ngIf="usertype==='home-layout'"></app-home-layout>
-        <app-home-layout *ngIf="activeTab==='home-layout'"></app-home-layout>
-        <app-logout-dialog *ngIf="usertype==='logout-dialog'"></app-logout-dialog>
+        <app-overview-hospital *ngIf="usertype==='overview-hospital'"></app-overview-hospital>
+        <app-add-organization-details *ngIf="usertype==='add-hospitalorganization'"></app-add-organization-details>
+        <app-overview-insurance *ngIf="usertype==='overview-insurance'"></app-overview-insurance>
+        <app-add-insuranceorganization-details *ngIf="usertype==='add-insuranceorganization'"></app-add-insuranceorganization-details>
         <app-activity *ngIf="usertype==='activity'"></app-activity>
-        <app-settings *ngIf="activeTab==='settings'"></app-settings>
-        <app-user-verification *ngIf="usertype==='user-verification'"></app-user-verification>
-        <app-view-users *ngIf="usertype ==='view-users'"> </app-view-users>
+        <app-settings *ngIf="usertype==='settings'"></app-settings>
+        <app-logout-dialog *ngIf="usertype==='logout-dialog'"></app-logout-dialog>
+        <app-helpcenter *ngIf="usertype==='helpcenter'"></app-helpcenter>
+        <app-profile *ngIf="usertype=== 'profile'"></app-profile>
     </div>
-</div>
