--- a/uwazitek/src/app/hospital-admin-dashboard/hospitaldashboard/hospitaldashboard.component.css
+++ b/uwazitek/src/app/hospital-admin-dashboard/hospitaldashboard/hospitaldashboard.component.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -14,7 +14,7 @@ body {
 /* Sidebar Styling */
 .sidebar {
   width: 200px;
-  background-color: rgba(0, 8, 45, 1);
+  background-color: #013249b0;
   color: #000000;
   height: 100vh;
   position: fixed;
