--- a/uwazitek/src/app/hospital-admin-dashboard/hospitaldashboard/hospitaldashboard.component.html
+++ b/uwazitek/src/app/hospital-admin-dashboard/hospitaldashboard/hospitaldashboard.component.html
@@ -24,9 +24,9 @@
               (click)="addActive('overview-request')">
               <a class="menu-link" (click)="onclick('overview-request')">Overview</a>
            </li>
-          <li [class.active-nav]="usertype==='send-request'"
-              (click)="addActive('send-request')">
-            <a class="menu-link" (click)="onclick('send-request')">Send Request</a>
+          <li [class.active-nav]="usertype==='pre-request'"
+              (click)="addActive('pre-request')">
+            <a class="menu-link" (click)="onclick('pre-request')">Send Request</a>
            </li>
          </ul>
 </li>
@@ -92,8 +92,7 @@
 <div class="content">
   <app-hospitalhome *ngIf="usertype==='hospitalhome'"></app-hospitalhome>
   <app-overview-request *ngIf="usertype==='overview-request'"></app-overview-request>
-  <app-send-request *ngIf="usertype==='send-request'"></app-send-request>
-  <app-upload-invoice *ngIf="usertype==='upload-invoice'"></app-upload-invoice>
+  <app-pre-request *ngIf="usertype==='pre-request'"></app-pre-request>
   <app-overview-claims *ngIf="usertype==='overview-claims'"></app-overview-claims>
   <app-hospital-user *ngIf="usertype==='hospital-user'"></app-hospital-user>
   <app-logout-dialog *ngIf="usertype==='logout-dialog'"></app-logout-dialog>
