--- a/uwazitek/src/app/hospital-admin-dashboard/pre-request/pre-request.component.css
+++ b/uwazitek/src/app/hospital-admin-dashboard/pre-request/pre-request.component.css
@@ -1,54 +1,62 @@
 .form-container {
-    width: 300%;
-    height: 120%;
-    max-width: 500px;
-    padding: 20px;
-    background-color:rgba(255, 255, 255, 0.8) ;
-    box-shadow:0 4px 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    margin-right: auto;
-    position: relative;
-    left:-100px
-    
-  }
-  h2 {
-    color: black;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  button {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    background-color: #4a90e2;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
-  }
+  /* width: 400px; */
+  margin: auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+}
 
-  button:hover {
-    background-color: #357ab8;
-  }
+h2 {
+  text-align: center;
+  color: #333;
+}
 
-  .form-group {
-    margin-bottom: 15px;
-    text-align: left;
-    padding: 10px;
-  }
-  label {
-    display: block;
-    font-weight: bold;
-    color: black;
-  }
-  input[type="text"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-      box-sizing: border-box;
-      background-color: #f9f9f9;
-    }
+label {
+  display: block;
+  margin: 10px 0 5px;
+  font-weight: bold;
+}
+
+input, select {
+  width: 400px;
+  padding: 10px 20px;
+  margin-bottom: 15px;
+  border: 2px solid rgba(15, 36, 115, 0.2);
+  border-radius: 8px;
+  font-family: "DM Sans", sans-serif;
+}
+
+button {
+  padding: 10px 40px;
+  text-align: center;
+  margin-right: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+button[type="button"] {
+  background-color: #0F2473;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+button[type="submit"] {
+  background-color: #0F2473;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+.button-container {
+  text-align: center;
+}
+button :hover{
+  color:rgb(30, 30, 207);
+}
+
+.input-group{
+  display: flex;
+  gap: 20px;
+}
