Co-authored-by: Collins Muiruri <CollinsMuiruri@users.noreply.github.com>

--- a/uwazitek/src/app/hospital-admin-dashboard/hospitaldashboard/hospitaldashboard.component.html
+++ b/uwazitek/src/app/hospital-admin-dashboard/hospitaldashboard/hospitaldashboard.component.html
@@ -96,5 +96,7 @@
   <app-overview-claims *ngIf="usertype==='overview-claims'"></app-overview-claims>
   <app-hospital-user *ngIf="usertype==='hospital-user'"></app-hospital-user>
   <app-logout-dialog *ngIf="usertype==='logout-dialog'"></app-logout-dialog>
+  <app-helpcenter *ngIf="usertype==='helpcenter'"></app-helpcenter>
+  <app-settings *ngIf="usertype==='settings'"></app-settings>
   
 </div>
